[workspace]
members = [
    'runtime/moonbase',
    'runtime/moonbeam',
    'runtime/moonriver',
]

[workspace.dependencies]
hex-literal = { version = "0.3.4" }
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
rlp = { version = "0.5",  default-features = false }
serde = { version = "1.0.101",  default-features = false, features = [ "derive" ] }
sha3 = { version = "0.10",  default-features = false }
smallvec = "1.8.0"

# Moonbeam
account = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
moonbeam-core-primitives = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
moonbeam-relay-encoder = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
moonbeam-runtime-common = { path = "runtime/common", default-features = false }
precompile-utils = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
session-keys-primitives = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
xcm-primitives = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
moonbeam-primitives-ext = { path = "shared/primitives/ext", default-features = false }

# Moonbeam pallets
moonbeam-xcm-benchmarks = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-asset-manager = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-author-mapping = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-crowdloan-rewards = { git = "https://github.com/purestake/crowdloan-rewards", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-erc20-xcm-bridge = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-ethereum-chain-id = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-ethereum-xcm = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-maintenance-mode = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false, features = [ "xcm-support" ] }
pallet-migrations = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-moonbeam-orbiters = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-parachain-staking = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-proxy-genesis-companion = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-randomness = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-xcm-transactor = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }

# Moonbeam precompiles
pallet-evm-precompile-author-mapping = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-balances-erc20 = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-batch = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-call-permit = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-collective = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-conviction-voting = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-crowdloan-rewards = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-democracy = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-parachain-staking = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-preimage = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-proxy = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-randomness = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-referenda = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-relay-encoder = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-xcm-transactor = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-xcm-utils = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompile-xtokens = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }
pallet-evm-precompileset-assets-erc20 = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }

# Moonbeam tracing
evm-tracing-events = { path = "shared/primitives/rpc/evm-tracing-events",  default-features = false, features = ["runtime-1600"] }
moonbeam-evm-tracer = { path = "shared/runtime/evm_tracer",  default-features = false }
moonbeam-rpc-primitives-debug = { path = "shared/primitives/rpc/debug", default-features = false }
moonbeam-rpc-primitives-txpool = { git = "https://github.com/purestake/moonbeam", rev = "runtime-2200", default-features = false }

# Substrate
frame-executive = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
frame-support = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-assets = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-collective = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-conviction-voting = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-democracy = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-identity = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-preimage = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-proxy = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-root-testing = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-referenda = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-scheduler = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-society = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-sudo = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-transaction-payment = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-treasury = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-utility = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-whitelist = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive", "max-encoded-len" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-debug-derive = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-inherents = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-offchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-session = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-version = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }

# Frontier
fp-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
fp-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
fp-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
fp-self-contained = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-base-fee = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false, features = [ "forbid-evm-reentrancy" ] }
pallet-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false, features = [ "forbid-evm-reentrancy" ] }
pallet-evm-precompile-blake2 = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37", default-features = false }

# Cumulus / Nimbus
cumulus-pallet-dmp-queue = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
nimbus-primitives = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-author-inherent = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-author-slot-filter = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
parachain-info = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }

# Polkadot / XCM
orml-traits = { git = "https://github.com/purestake/open-runtime-module-library", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
orml-xcm-support = { git = "https://github.com/purestake/open-runtime-module-library", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
orml-xtokens = { git = "https://github.com/purestake/open-runtime-module-library", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-xcm = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
pallet-xcm-benchmarks = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
polkadot-core-primitives = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
polkadot-parachain = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
xcm = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
xcm-builder = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
xcm-executor = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.37", default-features = false }

# Benchmarking
frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37",  default-features = false }
frame-system-benchmarking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37",  default-features = false }
frame-try-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37",  default-features = false }

ethereum = { version = "0.14.0", default-features = false }
hex = "0.4"
strum = { version = "0.24", default-features = false, features = [ "derive" ] }
strum_macros = "0.24"
cumulus-primitives-parachain-inherent = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.37" }
xcm-simulator = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.37" }
substrate-wasm-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
environmental = { version = "1.1.2", default-features = false }
ethereum-types = { version = "0.14", default-features = false }
impl-trait-for-tuples = "0.2.1"
evm = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
evm-runtime = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
evm-gasometer = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-runtime-interface = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }
sp-externalities = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37", default-features = false }

[profile.release]
panic = 'unwind'

[patch.crates-io]
evm = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.37" }
evm-runtime = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.37" }
evm-gasometer = { git = "https://github.com/purestake/evm", branch = "moonbeam-polkadot-v0.9.37" }

# Overrides to set Frontier version for code shared across runtime versions.
[patch."https://github.com/nanocryk/frontier"]
fp-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37" }
pallet-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.37" }

# Overrides to set Substrate version for code shared across runtime versions.
[patch."https://github.com/nanocryk/substrate-1"]
sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-externalities = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-runtime-interface = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.37" }
