[workspace]
members = [
	"runtime/moonbase",
	"runtime/moonbeam",
	"runtime/moonriver",
]
resolver = "2"

[workspace.package]
authors = ["PureStake"]
repository = "https://github.com/PureStake/moonbeam"

[workspace.dependencies]
# Dependencies are split into 2 groups: wasm and client.
# - "wasm" dependencies requires to be no_std compatible, which often requires
#   `default-features = false`. When used in a client-side crate the "std" feature should be enabled
#   there if it exists.
# - "client" dependencies are only used in the client, and thus don't need to be no_std compatible.

# Moonbeam (wasm)
account = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
evm-tracing-events = { path = "shared/primitives/rpc/evm-tracing-events", default-features = false , features = ["runtime-1600"] }
moonbeam-core-primitives = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
moonbeam-primitives-ext = { path = "shared/primitives/ext", default-features = false }
moonbeam-rpc-primitives-debug = { path = "shared/primitives/rpc/debug", default-features = false }
moonbeam-rpc-primitives-txpool = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }

moonbeam-evm-tracer = { path = "shared/runtime/evm_tracer", default-features = false }
moonbeam-relay-encoder = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
moonbeam-runtime-common = { path = "runtime/common", default-features = false }

moonbeam-xcm-benchmarks = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-asset-manager = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-author-mapping = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-erc20-xcm-bridge = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-ethereum-chain-id = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-ethereum-xcm = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }

pallet-evm-precompile-author-mapping = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-balances-erc20 = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-batch = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-call-permit = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-collective = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-conviction-voting = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-crowdloan-rewards = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-democracy = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-gmp = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-parachain-staking = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-preimage = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-proxy = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-randomness = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-referenda = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-registry = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-relay-encoder = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-xcm-transactor = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-xcm-utils = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompile-xtokens = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-evm-precompileset-assets-erc20 = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-maintenance-mode = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-migrations = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-moonbeam-orbiters = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-parachain-staking = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-proxy-genesis-companion = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-randomness = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
pallet-xcm-transactor = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
precompile-utils = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
session-keys-primitives = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }
xcm-primitives = { default-features = false , git = "https://github.com/PureStake/moonbeam", rev = "runtime-2403" }

pallet-crowdloan-rewards = { git = "https://github.com/purestake/crowdloan-rewards", branch = "moonbeam-polkadot-v0.9.40", default-features = false }

# Substrate (wasm)
frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
frame-executive = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
frame-support = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
frame-system-benchmarking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
frame-try-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-assets = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-collective = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-conviction-voting = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-democracy = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-identity = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-multisig = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-preimage = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-proxy = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-referenda = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-root-testing = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-scheduler = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-society = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-staking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-sudo = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-transaction-payment = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-treasury = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-utility = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-whitelist = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
parity-scale-codec = { version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0", default-features = false, features = [
	"derive",
] }
sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-application-crypto = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-consensus-vrf = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-debug-derive = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-externalities = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-inherents = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-offchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-runtime-interface = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-session = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
sp-version = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }

# Substrate (client)
substrate-wasm-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.40" }

# Frontier (wasm)
ethereum = { version = "0.14.0", default-features = false, features = [
	"with-codec",
] }
ethereum-types = { version = "0.14", default-features = false }
evm = { git = "https://github.com/purestake/evm", branch = "tgm-record-external-cost", default-features = false }
evm-gasometer = { git = "https://github.com/purestake/evm", branch = "tgm-record-external-cost", default-features = false }
evm-runtime = { git = "https://github.com/purestake/evm", branch = "tgm-record-external-cost", default-features = false }
fp-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
fp-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
fp-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
fp-self-contained = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-base-fee = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false, features = [
	"forbid-evm-reentrancy",
	"evm-with-weight-limit",
] }
pallet-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false, features = [
	"forbid-evm-reentrancy",
	"evm-with-weight-limit",
] }
pallet-evm-precompile-blake2 = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false, features = [
	"evm-with-weight-limit",
] }
pallet-evm-precompile-bn128 = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false, features = [
	"evm-with-weight-limit",
] }
pallet-evm-precompile-dispatch = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false, features = [
	"evm-with-weight-limit",
] }
pallet-evm-precompile-modexp = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false, features = [
	"evm-with-weight-limit",
] }
pallet-evm-precompile-sha3fips = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.40", default-features = false, features = [
	"evm-with-weight-limit",
] }

# Cumulus / Nimbus (wasm)
cumulus-pallet-dmp-queue = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
nimbus-primitives = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-author-inherent = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-author-slot-filter = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
parachain-info = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.40", default-features = false }

# Polkadot / XCM (wasm)
orml-traits = { git = "https://github.com/purestake/open-runtime-module-library", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
orml-xcm-support = { git = "https://github.com/purestake/open-runtime-module-library", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
orml-xtokens = { git = "https://github.com/purestake/open-runtime-module-library", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-xcm = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
pallet-xcm-benchmarks = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
polkadot-core-primitives = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
polkadot-parachain = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
xcm = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
xcm-builder = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.40", default-features = false }
xcm-executor = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.40", default-features = false }

# Other (wasm)
affix = "0.1.2"
async-trait = { version = "0.1.42" }
blake2-rfc = { version = "0.2.18", default-features = false }
derive_more = "0.99"
environmental = { version = "1.1.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.3.4" }
impl-serde = { version = "0.3.1", default-features = false }
impl-trait-for-tuples = "0.2.1"
libsecp256k1 = { version = "0.7", default-features = false }
log = { version = "0.4", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.6"
rlp = { version = "0.5", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
serde = { version = "1.0.101", default-features = false }
sha3 = { version = "0.10", default-features = false }
slices = "0.2.0"
smallvec = "1.8.0"
strum = { version = "0.24", default-features = false, features = ["derive"] }
strum_macros = "0.24"

# Other (client)
ansi_term = "0.12.1"
assert_cmd = "2.0.10"
async-io = "1.3"
bip32 = { git = "https://github.com/purestake/crates", branch = "bip32-v0.4.0-fix", default-features = false, features = [
	"bip39",
] }
clap = { version = "4.0.9", features = ["derive"] }
exit-future = "0.2"
flume = "0.10.9"
futures = { version = "0.3.21" }
jsonrpsee = { version = "0.16.2", default-features = false }
maplit = "1.0.2"
nix = "0.23"
parking_lot = "0.12.0"
primitive-types = "0.12.0"
prometheus = { version = "0.13.0", default-features = false }
rand = "0.7.3"
serde_json = { version = "1.0" }
similar-asserts = "1.1.0"
tempfile = "3.2.0"
tiny-bip39 = { version = "0.8", default-features = false }
tokio = { version = "1.13" }
tracing = "0.1.34"
tracing-core = "0.1.29"
trie-root = "0.15.2"
url = "2.2.2"

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Moonbeam. In other words, if you add
# a dependency on Moonbeam, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Moonbeam workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-zebra = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
k256 = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
codegen-units = 1
incremental = false
inherits = "release"
lto = true

[profile.testnet]
inherits = "release"
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[profile.release]
# Moonbeam runtime requires unwinding.
opt-level = 3
panic = "unwind"
