[workspace]
members = [
    'runtime/moonbeam',
    'runtime/moonriver',
    'runtime/moonbase',
]

[profile.release]
panic = 'unwind'

# Switch to custom tracing substitutes.
[patch.crates-io]
evm = { git = "https://github.com/purestake/evm", branch = "runtime-substitutes-0.27.1"}
evm-runtime = { git = "https://github.com/purestake/evm", branch = "runtime-substitutes-0.27.1" }
evm-gasometer = { git = "https://github.com/purestake/evm", branch = "runtime-substitutes-0.27.1" }